
November 2014:
1. Better font size and position in pave stats
2. Resize/move of element only inside correspondent pad
3. Adjust of frame size when Y-axis exceed pad limits
4. Correct values in tooltip for THStack
5. Exclude drawing of markers from TGraph outside visible range
6. Drawing of canvas without TFrame object
7. Many other small bug fixes and improvements, thanks to Maximilian Dietrich


October 2014:
1. Add "shortcut icon"
2. Add demo of online THttpServer - shell script copies data from
   running httpserver.C macro on Apache webserver
3. Evaluate 'monitoring' parameter for online server like:
      http://localhost:8080/?monitoring=1000.
   Parameter defines how often displayed objects should be updated.
4. Implement 'opt' and 'opts' URL parameters for main page.
5. Show progress with scripts loading in the browser window
6. When one appends "+" to the filename, its content read completely with first I/O operation.
7. Implement JS custom streamer for TCanvas, restore aspect ratio when drawing
8. Major redesign of drawing classes. Resize and update of TCanvas are implemented.
   All major draw functions working with HTML element id as first argument.
9. Extract 3D drawings into separate JSRoot3DPainter.js script
10.Use newest three.min.js (r68) for 3D drawings, solves problem with Firefox.
11.Introduce generic list of draw functions for all supported classes.
12.Add possibility to 'expand' normal objects in the hierarchy browser.
   For instance, this gives access to single elements of canvas,
   when whole canvas cannot be drawn.
13.Correct usage of colors map, provided with TCanvas.
14.Introduce JSROOT.redraw() function which is capable to create or update object drawing.
15.In main index.htm page browser can be disabled (nobrowser parameter) and
   page can be used to display only specified items from the file
16.Add support of TPolyMarker3D in binary I/O


September 2014:
1. First try to handle resize of the browser,